--- a/Structural.html
+++ b/Structural.html
@@ -223,7 +223,7 @@
       AOS.init();
       </script>
       <div class="bottom">
-      <p>Copyright © 2023 Joseph Quiñones. All rights reserved.</p>
+        <p>&copy; 2024 Quinn's Resort. All Rights Reserved.</p>
       </div> 
       </div>
 
