--- a/amenities.html
+++ b/amenities.html
@@ -407,7 +407,7 @@ button:hover{
 </div>
 
 <footer>
-    <p>&copy; 2023 Joseph's Resort. All Rights Reserved.</p>
+    <p>&copy; 2024 Quinn's Resort. All Rights Reserved.</p>
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
