--- a/reservation.html
+++ b/reservation.html
@@ -56,14 +56,7 @@
             color: white;
             background-color: #222;
         }
-        .navbar{
-    margin-left: 5%;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 52%;
-}
+
 
 .navbar{
     margin-left: 5%;
@@ -227,18 +220,20 @@ button:hover{
   
 
       <div class="content">
-        <h1>Joseph's Resort</h1>
-        <p>Your perfect escape awaits. Discover a paradise where luxury meets nature, offering unforgettable <br>experiences, relaxation, and adventure. Let us make your stay extraordinary!
+        <h1>Reservation</h1>
+        <p>Your perfect escape awaits. Relax, recharge, and experience paradise.
+
+
         </p>
 
       <div>
-        <button onclick="window.location.href='#tomybody'"><span></span>Read more</button>
+        <button onclick="window.location.href='#reserve'"><span></span>Click here!</button>
       </div>
       </div>
     </div>
 
 
-<div class="reservation-container" data-aos="fade-up">
+<div class="reservation-container" data-aos="fade-up" id="reserve">
     <h2>Reservation Form</h2>
     <form action="process_reservation.php" method="POST">
         <label for="name">Full Name</label>
@@ -279,7 +274,7 @@ button:hover{
 </div>
 
 <footer>
-    <p>&copy; 2023 Joseph's Resort. All Rights Reserved.</p>
+    <p>&copy; 2024 Quinn's Resort. All Rights Reserved.</p>
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
