--- a/aboutus.html
+++ b/aboutus.html
@@ -150,6 +150,66 @@ button:hover{
     transition: 0.4s;
     color:black;
 }
+
+
+.team-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.team-member {
+    background: linear-gradient(145deg, rgba(0,150,136,0.8), rgba(0,0,0,0.8));
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+    width: 250px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.team-member:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+}
+
+.team-member img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 15px;
+    border: 3px solid #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.team-member h3 {
+    font-size: 1.8rem;
+    color: #fff;
+    margin-bottom: 5px;
+}
+
+.team-member p {
+    font-size: 1rem;
+    color: #ccc;
+    margin: 5px 0;
+}
+
+.team-member p strong {
+    color: #00d1a0;
+}
+
+.content-container p {
+    font-size: 1.2rem;
+    color: #ccc;
+    margin-bottom: 20px;
+}
+
+
+
+
     </style>
 </head>
 <body>
@@ -169,7 +229,7 @@ button:hover{
   
 
       <div class="content">
-        <h1>Joseph's Resort</h1>
+        <h1>About us</h1>
         <p>Your perfect escape awaits. Discover a paradise where luxury meets nature, offering unforgettable <br>experiences, relaxation, and adventure. Let us make your stay extraordinary!
         </p>
 
@@ -179,26 +239,49 @@ button:hover{
       </div>
     </div>
 
-<div class="content-container" data-aos="fade-up">
-    <h2>Who We Are</h2>
-    <p>Joseph's Resort is a luxury getaway destination offering unparalleled service, stunning views, and exquisite accommodations. Founded with the goal of providing guests with an unforgettable experience, our resort caters to those seeking relaxation, adventure, and comfort.</p>
+    <div class="content-container" data-aos="fade-up">
+        <h2>Meet Our Amazing Team</h2>
+        <p>Our team is the heart and soul of Joseph's Resort. Each member brings unique skills, passion, and personality to create unforgettable experiences for our guests.</p>
+        <div class="team-section">
+            <div class="team-member" data-aos="fade-up">
+                <img src="Ezo.jpg" alt="Team Member 1">
+                <h3>Santiago Ezo Eleazar</h3>
+                <p><strong>General Manager</strong></p>
+                <p>With over a decade of experience,Ezo leads our team with enthusiasm and a big smile. He’s your go-to guy for all things resort-related!</p>
+            </div>
+            <div class="team-member" data-aos="fade-up">
+                <img src="Lev.jpg" alt="Team Member 2">
+                <h3>Roces , James Patrick, J</h3>
+                <p><strong>Head Chef</strong></p>
+                <p>A culinary wizard, Lev creates dishes that are as beautiful as they are delicious. Don’t leave without trying his signature desserts!</p>
+            </div>
+            <div class="team-member" data-aos="fade-up">
+                <img src="kler.jpg" alt="Team Member 3">
+                <h3>Rosales, Azeckah Claire</h3>
+                <p><strong>Guest Relations Manager</strong></p>
+                <p>Claire is all about making guests feel at home. Her energy and charisma will brighten your day!</p>
+            </div>
+            <div class="team-member" data-aos="fade-up">
+                <img src="Marga.jpg" alt="Team Member 4">
+                <h3>Solomon , Margarette Ashly 
+                </h3>
+                <p><strong>Events Coordinator</strong></p>
+                <p>From weddings to corporate retreats, Ashly is the creative genius behind every successful event at our resort.</p>
+            </div>
+            <div class="team-member" data-aos="fade-up">
+                <img src="sigma.gif" alt="Team Member 5">
 
-    <h2>Our Mission</h2>
-    <p>Our mission is simple: to provide our guests with a retreat that feels like a home away from home. We offer a wide range of luxurious rooms, exceptional amenities, and personal services that exceed expectations. Whether you're here for business or pleasure, we are committed to ensuring that your stay is nothing short of amazing.</p>
+                <h3>Quiñones, Joseph M</h3>                <p><strong>Adventure Guide</strong></p>
+                <p>Adventure is Joseph’s middle name! Whether it's hiking, snorkeling, or ziplining, he’ll make sure you have an unforgettable time.</p>
 
-    <h2>Our Values</h2>
-    <p>At Joseph's Resort, we believe in:
-        <ul>
-            <li>Providing high-quality service at every level</li>
-            <li>Creating lasting memories for all of our guests</li>
-            <li>Respecting the environment and sustainability</li>
-            <li>Continuous improvement to meet the evolving needs of our customers</li>
-        </ul>
-    </p>
-</div>
+            </div>
+        </div>
+    </div>
+    
+    
 
 <footer>
-    <p>&copy; 2023 Joseph's Resort. All Rights Reserved.</p>
+    <p>&copy; 2024 Quinn's Resort. All Rights Reserved.</p>
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
