--- a/roomrate.html
+++ b/roomrate.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <style>
+        
         body {
             margin: 0;
             font-family: 'Rubik', sans-serif;
@@ -22,47 +23,40 @@
             background-position: center;
             background-attachment: fixed;
         }
+        .navbar{
+    margin-left: 5%;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 52%;
+}
 
-        .navbar {
-            margin: 0 5%;
-            padding: 20px 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    position: relative;
+}
 
-        .navbar ul {
-            padding: 0;
-            margin: 0;
-            display: flex;
-        }
-
-        .navbar ul li {
-            list-style: none;
-            margin: 0 20px;
-            position: relative;
-        }
-
-        .navbar ul li a {
-            text-decoration: none;
-            color: #fff;
-            text-transform: uppercase;
-        }
-
-        .navbar ul li::after {
-            content: '';
-            height: 3px;
-            width: 0%;
-            background: #009688;
-            position: absolute;
-            left: 0;
-            bottom: -10%;
-            transition: 0.5s;
-        }
-
-        .navbar ul li:hover::after {
-            width: 100%;
-        }
+.navbar ul li a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+}
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width: 0%;
+    background: #009688;
+    position: absolute;
+    left: 0;
+    bottom: -10%;
+    transition: 0.5s;
+}
+.navbar ul li:hover::after{
+    width: 100%;
+}
 
         .content {
             width: 100%;
@@ -98,6 +92,7 @@
             border-radius: 10px;
             text-align: center;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            position: relative;
         }
 
         .grid-item:hover {
@@ -138,6 +133,30 @@
             background: #00796b;
         }
 
+        .discount-badge {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: #e74c3c;
+            color: white;
+            padding: 5px 10px;
+            font-size: 0.8rem;
+            border-radius: 5px;
+        }
+
+        .availability {
+            display: inline-block;
+            padding: 5px 10px;
+            border-radius: 5px;
+            background-color: green;
+            color: white;
+            font-size: 0.9rem;
+        }
+
+        .unavailable {
+            background-color: red;
+        }
+
         footer {
             text-align: center;
             padding: 20px;
@@ -168,11 +187,13 @@
 
     <div class="content-container">
         <div class="grid-item" data-aos="fade-up" data-aos-delay="200">
+            <span class="discount-badge">10% Off</span>
             <img src="standardroom.webp" alt="Standard Room">
             <h2>Standard Room</h2>
             <p>Starting at $120 per night</p>
             <p>Perfect for solo travelers or couples looking for a cozy stay.</p>
-            <a href="#" class="btn">Book Now</a>
+            <span class="availability">Available</span>
+            <a href="reservation.html" class="btn">Book Now</a>
         </div>
 
         <div class="grid-item" data-aos="fade-up" data-aos-delay="400">
@@ -180,7 +201,8 @@
             <h2>Deluxe Room</h2>
             <p>Starting at $180 per night</p>
             <p>Enjoy additional amenities and breathtaking views from your room.</p>
-            <a href="#" class="btn">Book Now</a>
+            <span class="availability unavailable">Unavailable</span>
+            <a href="#" class="btn">Notify Me</a>
         </div>
 
         <div class="grid-item" data-aos="fade-up" data-aos-delay="600">
@@ -188,12 +210,13 @@
             <h2>Suite</h2>
             <p>Starting at $250 per night</p>
             <p>Experience the ultimate in luxury and comfort with our premium suites.</p>
-            <a href="#" class="btn">Book Now</a>
+            <span class="availability">Available</span>
+            <a href="reservation.html" class="btn">Book Now</a>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2023 Joseph's Resort. All Rights Reserved.</p>
+        <p>&copy; 2024 Quinn's Resort. All Rights Reserved.</p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
