--- a/Structural.html
+++ b/Structural.html
@@ -198,9 +198,10 @@
 
       <div class="grid-container">
         <div class ="grid-item"data-aos="fade-right"data-aos-delay="1000"data-aos-duration="1000">
-        <h1>Check Out Our Room Rate</h1>
+        <h1>Check Out Our About Us!</h1>
         <br>
-        <p>"Choose the perfect accommodation for your stay at Joseph's Resort. Whether you're looking for a cozy retreat or a luxurious suite, we offer a variety of room types to suit every need and budget. Explore our competitive rates and select the ideal room for your unforgettable getaway."</p>
+        <p>    Discover the heart and soul of Quinn's Resort! From our vision of creating unforgettable memories to the dedicated team who brings it all to life, 
+          learn more about what makes us your perfect paradise getaway.</p>
         <br>
         <br>
         <div class="shet">
@@ -210,7 +211,7 @@
         </div> 
         <div class="grid-item" data-aos="fade-left"data-aos-delay="600"data-aos-duration="600" > 
         <div class="collage">
-        <div data-aos="fade-left"data-aos-delay="1000"data-aos-duration="1000"><img src="standardroom.webp" alt="Photo 2" class="photo2"></div>
+        <div data-aos="fade-left"data-aos-delay="1000"data-aos-duration="1000"><img src="aboutus.jpg" alt="Photo 2" class="photo2"></div>
         <div data-aos="fade-left"data-aos-delay="1000"data-aos-duration="800"><img src="deluxeroom.jpg" alt="Photo 3" class="photo3"></div>
         <div data-aos="fade-left"data-aos-delay="1000"data-aos-duration="600"><img src="suiteroom.jpg" alt="Photo 4" class="photo4"></div>
         </div>
